@@ -1,4 +1,5 @@
 plugins {
+    id 'application'
     id "io.github.qishr.cascara-meta.java-library" version "0.1.0"
     id "io.github.qishr.cascara-meta.publish" version "0.1.0"
 }
@@ -12,7 +13,7 @@ repositories {
 
 dependencies {
     // Cascara
-    implementation(platform("io.github.qishr:cascara-meta-bom:0.1.14"))
+    implementation(platform("io.github.qishr:cascara-meta-bom:0.1.17"))
     implementation "io.github.qishr:cascara-common"
 
     // JUnit
@@ -25,3 +26,20 @@ dependencies {
     testImplementation 'org.mockito:mockito-core'
     testImplementation 'org.mockito:mockito-junit-jupiter'
 }
+
+
+// tasks.withType(Test).configureEach {
+//     jvmArgs '--add-modules=jdk.incubator.vector'
+// }
+
+
+test {
+    jvmArgs += ["--add-modules=jdk.incubator.vector"]
+}
+
+
+application {
+    mainClass.set("io.github.qishr.cascara.lang.json.util.ProfilingHarness")
+    applicationDefaultJvmArgs = ["--add-modules=jdk.incubator.vector"]
+}
+
